SEM2/COD7001/LABS/LAB6/cstn6/src/master_tests/invalid/bad_13.lang
var x = 13 var y = 10;